# BinaryBuilder2.jl

./: .gitignore  Makefile  Manifest-v1.12.toml  Manifest-v1.13.toml  Manifest-v1.14.toml  Manifest.toml  Project.toml  README.md  TODO.md  run_all_tests.sh
.buildkite/: Project.toml  generate_pipeline.jl  pipeline.yml  run_bb_tests.yml
BinaryBuilderAuditor.jl/: Manifest.toml  Project.toml
BinaryBuilderGitUtils.jl/: Manifest.toml  Project.toml  README.md
BinaryBuilderPlatformExtensions.jl/: Manifest.toml  Project.toml  README.md
BinaryBuilderProducts.jl/: Manifest.toml  Project.toml  README.md
BinaryBuilderSources.jl/: Manifest.toml  Project.toml  README.md
BinaryBuilderToolchains.jl/: Manifest.toml  Project.toml  README.md
BinaryBuilderToolchains.jl/test/testsuite/CMakeToolchain/00_hello_world/: CMakeLists.txt  Makefile  README.md  hello.c
BinaryBuilderToolchains.jl/test/testsuite/CMakeToolchain/01_cxx_string_abi/: CMakeLists.txt  Makefile  README.md  cxx_string_abi.cpp  libstring.cpp  libstring.h
BinaryBuilderToolchains.jl/test/testsuite/HostToolsToolchain/00_autotools/autotools_project/: configure.ac  hello.c
JLLGenerator.jl/: Manifest.toml  Project.toml  README.md
JLLWrappers.jl/: Manifest.toml  Project.toml  README.md
JuliaCon2024/: .gitignore  0_SandboxExample.jl  1_JLLPrefixesExample.jl  2_SandboxForeignArchExample.jl  3_ToolchainExample.jl  4_BuildExample.jl  5_MultipleExtractionExample.jl
KeywordArgumentExtraction.jl/: Manifest.toml  Project.toml  README.md
LazyJLLWrappers.jl/: LICENSE  Manifest.toml  Project.toml  README.md
MultiHashParsing.jl/: Manifest.toml  Project.toml  README.md
ScratchSpaceGarbageCollector.jl/: Manifest.toml  Project.toml  README.md
TreeArchival.jl/: Manifest.toml  Project.toml  README.md
bootstrap/: README.md  bootstrap_common.jl  run_full_bootstrap.jl
docs/: Project.toml  make.jl
src/: AbstractPlatforms.jl  BB2.jl  BinaryBuilder2.jl  BuildAPI.jl  (+18 more)
(+316 files in other folders)
